buttonbar wrapping button stretch fix

--- a/src/main/resources/public/css/meta64.scss
+++ b/src/main/resources/public/css/meta64.scss
@@ -69,6 +69,12 @@ $smallBorderSize: 3px;
 //     }
 // }
 
+// we tack this onto bootstrap btn-group, becasue without it, buttons stretch wider than normal when 
+// wrapped to a new line (position) that where the row isn't full and has space to stretch. 
+.btnGroup {
+    display: inline;
+}
+
 .myjumbotron {
     background-size: 100% auto;
     background-image: url(/images/PIA09561_large.jpg);
